--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
 html {
     min-width: 100%;
     min-height: 100%;
+    display: flex;
+    align-items: center;
 }
 
 body {
@@ -28,11 +30,10 @@ button {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #aaaaaa;
+    background-color: rgb(21, 82, 148);
     padding: 10px;
     border: 5px solid black;
     border-radius: 3%;
-    margin-top: 48px;
 }
 
 #display {
@@ -40,7 +41,7 @@ button {
     width: 90%;
     display: flex;
     flex-direction: column;
-    background-color: #eeeeee;
+    background-color: #bbbbbb;
     border: 2px solid black;
     border-radius: 3%;
 }
@@ -48,6 +49,14 @@ button {
 .display {
     height: 50%;
     padding: 5px;
+    font-size: 28px;
+    letter-spacing: 2px;
+    display: flex;
+}
+
+#display-bottom, #display-top {
+    justify-content: flex-end;
+    align-items: flex-end;
 }
 
 #backbtns {
@@ -63,12 +72,12 @@ button {
     width: 50%;
 }
 
-#clearbtn {
-    background-color: rgba(83, 167, 255, 0.5);
+#clearbtn, .operator {
+    background-color: rgba(83, 167, 255, 0.8);
 }
 
 #deletebtn {
-    background-color: rgba(255,0,0,0.5);
+    background-color: rgba(255,0,0,0.8);
 }
 
 #mathbtns {
@@ -93,4 +102,3 @@ button {
     width: 23%;
     height: 85%;
 }
-
