--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     min-width: 100%;
     min-height: 100%;
     display: flex;
+    flex-direction: column;
 }
 
 button {
@@ -34,6 +35,7 @@ button {
     padding: 10px;
     border: 5px solid black;
     border-radius: 3%;
+    margin-top: 5%;
 }
 
 #display {
@@ -101,4 +103,15 @@ button {
 .mathbtn {
     width: 23%;
     height: 85%;
+}
+
+#footer {
+    background-color: black;
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 24px 0;
+    width: 100%;
+    text-align: center;
+    margin-top: 7%;
 }
